--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongodb": "^4.10.0",
-    "mongoose": "^6.6.1"
+    "mongoose": "^6.6.1",
+    "stripe": "^12.2.0"
   }
 }
