--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "stripe": "^12.0.0",
     "vue": "^2.6.14",
     "vue-awesome-paginate": "^1.1.46",
+    "vue-cookies": "^1.8.3",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
