--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "vue-awesome-paginate": "^1.1.46",
     "vue-cookies": "^1.8.3",
     "vue-router": "^3.5.1",
+    "vue-sessionstorage": "^1.0.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
