--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.3.4",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
     "mongodb": "^5.1.0",
     "stripe": "^12.0.0",
     "vue": "^2.6.14",
