Added server file in client

--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "dev": "nodemon server/server.js"
+    "dev": "nodemon server/server.js",
+    "start": "node server.js"
   },
   "dependencies": {
     "@stripe/stripe-js": "^1.52.0",
